@@ -1,3 +1,6 @@
+2012-2-12  Yu-Sung Su <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 0.03-01.
+    * R/jags.parallel: add new function that runs jags parallely
 
 2011-8-8  Masanao Yajima <yajima@ucla.edu>  
     * DESCRIPTION (Version, Date): 0.02-29.
